New in v0.6.15 (2011/08/??)
----------------------------
Enhancements:

Enhancements/Unreported bugs fixed.
- Ignore 404 errors when we try to delete a file on Ubuntu One.

Bugs closed in this release:
703142     AssertionError: assert len(chain_list) == 2
794576     Transport endpoint is not connected
815635     Bad passphrase can leave bogus sigtar in archive
818178     Shouldn't try to delete files it knows don't exist
821368     Error doing backup of the .evolution folder
823556     sftp errors after rev 740 change
824678     0.6.14 Fails to install on 8.04 LTS (Hardy)

Merges:
lp:~mterry/duplicity/u1-ignore-404
lp:~mterry/duplicity/guard-tarinfo
lp:~mterry/duplicity/enotconn
lp:~mterry/duplicity/look-at-partials-during-sync
lp:~mterry/duplicity/more-accurate-sync
lp:~mterry/duplicity/report-encrypted-chains
lp:~mterry/duplicity/815635
lp:~mterry/duplicity/retry-u1
lp:~mterry/duplicity/818178
lp:~ed.so/duplicity/encr-sign-key2
lp:~mterry/duplicity/u1-fixes
lp:~carlos-abalde/duplicity/google-docs


New in v0.6.14 (2011/06/18)
----------------------------
Enhancements:
452342     Provide Ubuntu One integration

Bugs closed in this release:
433591     AttributeError: FileobjHooked instance has no attribute 'name'
487720     Restore fails with "Invalid data - SHA1 hash mismatch"
507904     Cygwin: Full Backup fails with "IOError: [Errno 13] Permission denied"
512628     --exclude-filelist-stdin and gpg error with/without PASSPHRASE
680425     Endless retype passphrase when typo
705499     "include-filelist-stdin" not implemented on version 0.6.11
739438     [PATCH] Local backend should always try renaming instead of copying
753858     cannot import name S3ResponseError
761688     Difference found: File X has permissions 666, expected 666
777377     collection-status asking for passphrase
778215     ncftpls file delete fails in ftpbackend.py
782294     create tomporary files with sftp
782321     duplicity sftp backend should ignore removing a file which is not there