@@ -88,14 +88,14 @@ def get_passphrase(n, action, for_signing = False):
 
     # check if we can reuse an already set (signing_)passphrase
     ## if signing key is also an encryption key assume that the passphrase is identical
-    if ( for_signing 
-         and globals.gpg_profile.sign_key in globals.gpg_profile.recipients 
+    if ( for_signing
+         and globals.gpg_profile.sign_key in globals.gpg_profile.recipients
          and globals.gpg_profile.passphrase is not None ):
         log.Notice(_("Reuse already set PASSPHRASE as SIGNING_PASSPHRASE"))
         return globals.gpg_profile.passphrase
     ## if one encryption key is also the signing key assume that the passphrase is identical
-    if ( not for_signing 
-         and globals.gpg_profile.sign_key in globals.gpg_profile.recipients 
+    if ( not for_signing
+         and globals.gpg_profile.sign_key in globals.gpg_profile.recipients
          and globals.gpg_profile.signing_passphrase is not None ):
         log.Notice(_("Reuse already set SIGNING_PASSPHRASE as PASSPHRASE"))
         return globals.gpg_profile.signing_passphrase
@@ -903,7 +903,7 @@ def sync_archive(decrypt):
 
         log.Notice(_("Deleting local %s (not authoritative at backend).") % del_name)
         try:
-            os.unlink(del_name)
+            util.ignore_missing(os.unlink, del_name)
         except Exception, e:
             log.Warn(_("Unable to delete %s: %s") % (del_name, str(e)))
 
